--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.env
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -152,3 +154,5 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
+
+base-vue.html
