--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.0.2",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
+    "vue-icon": "^2.2.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
