--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
     "core-js": "^3.6.5",
+    "django-reverse": "^1.2.0",
     "vue": "^3.0.0",
     "vue-icon": "^2.2.0",
     "vue-router": "^4.0.0-0",
