--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.4.1
 Django==3.2.5
 django-dotenv==1.4.2
+django-js-reverse==0.9.1
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.7.2
 mysqlclient==2.0.3
